# full_line_veido_proj

./: .gitignore  README.md  dashboard.html
.claude/: settings.local.json
observer/: CMakeLists.txt  ReadMe.md  observer.cpp  telemetry.h
player/: AudioPipeline.h  CMakeSettings.json  CmakeLists.txt  ControlClient.cpp  ControlClient.h  D3D11Renderer.cpp  D3D11Renderer.h  FFmpegD3D11Player.h  FFmpegUtil.h  PlayerStatus.h  PlayerUi.h  ReadMe.md  Recorder.cpp  Recorder.h  SrtUrl.h  VideoPipeline.h  main.cpp
pusher/: CMakeLists.txt  ReadMe.md  app_config.c  app_config.h  audio_device.c  audio_device.h  control_server.c  control_server.h  gst_runtime.c  gst_runtime.h  srt_cam_push.c  srt_cam_push.conf  telemetry.h  telemetry_injector.c  telemetry_injector.h
srt_server/: CMakeLists.txt  CMakeLists.txt.txt  ReadMe.md  ReadMe.md.bak  dashboard.html
srt_server/src/: cli.hpp  global_controller.hpp  main.cpp  main_with_annotation.cpp  pusher_control_client.hpp  relay_server.hpp  server_context.hpp  subscriber_controller.hpp  subscriber_session.hpp  telemetry.h  telemetry_relay.hpp  ts_validator.hpp  ws_broadcaster.hpp  ws_util.hpp
